# cmu

./: Cargo.toml  README.md  rc.txt  vk_api.rs
.github/workflows/: release.yml  release_second_attempt.yml
src/: auth.rs  client.rs  config.rs  main.rs  navigation.rs  test_client.rs  ui.rs  vk_api.rs
