[package]
name = "cmu"
version = "0.1.0"
edition = "2024"

[dependencies]
# for tui
ratatui = "0.28"
rand = "0.8"
crossterm = { version = "0.28", features = ["serde"] }
# for http & api calls
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# for json
serde_json = "1.0"
# for conf
serde = {version = "1", features = ["derive"] }
toml = "0.8"
# for sending messages in vk
urlencoding = "2.1"
dirs = "6.0.0"
async-trait = "0.1.89"
# for auth
open = "5.3"
tiny_http = "0.12"
url = "2.5"
